--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Nurafian Z | Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <meta property="og:image" content="https://i.imgur.com/7vAfn5f.png"/>
+  <meta property="og:image" content="https://i.imgur.com/7vAfn5f.png" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -47,12 +47,12 @@
               style="padding: 2px;"></i><span>About Me</span></a></li>
         <li><a href="#skills" class="nav-link scrollto"><i class="fa-solid fa-chart-bar"></i><span>Skills</span></a>
         </li>
-        <li><a href="#ord" class="nav-link scrollto"><i class="fa-solid fa-person-military-rifle"></i><span>ORD Counter</span></a>
-        </li>
         <li><a href="#resume" class="nav-link scrollto"><i class="fa-solid fa-timeline"></i><span>Timelines</span></a>
         </li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="fa-solid fa-list"></i><span>Works By
               NRFZ</span></a>
+        </li>
+        <li><a href="blog.html" class="nav-link scrollto"><i class="fa-solid fa-pen-clip"></i><span>Blog</span></a>
         </li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -65,7 +65,7 @@
     <div id="centered-container" data-aos="fade-up">
       <div id="profile-picture"></div>
       <span id="title">Nurafian Zulkifli</span>
-      <span id="position">Supply Assistant (GE), Admin Support Assistant <br> &amp; IT Diploma Graduate</span>
+      <span id="position">IT Diploma Graduate,<br>Passionate about UI/Signage Designs</span>
       <div id="media">
         <a href="https://github.com/nurafianZulkifli" target="_blank" class="media_link" title="GitHub">
           <div class="fa-brands fa-github" style="font-size: 32px"></div>
@@ -97,7 +97,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2><i class="fa-solid fa-user"></i>&nbsp;&nbsp;About Me</h2>
+          <h2><i class="fa-solid fa-user"></i> | About Me</h2>
         </div>
 
         <div class="row g-2" data-aos-delay="200">
@@ -108,8 +108,8 @@
                 <div class="icon">
                   <i class="fa-solid fa-person-military-rifle"></i>
                 </div>
-                <h3>Currently Serving The Nation</h3>
-                <p>Supply Assistant (GE) - Singapore Armed Forces</p>
+                <h3>OWADIO!</h3>
+                <p>Currently taking a break, looking for job opportunities</p>
               </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
                   <i class="fa-solid fa-heart"></i>
                 </div>
                 <h3>Likes & Interests</h3>
-                <p>Signage Designs, UX Designs & Research, UI Designing, Gadgets & Techs</p>
+                <p>Wayfinding Signage Designs, UX Designs & Research, UI Designing, Gadgets & Techs</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -183,7 +183,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2><i class="fa-solid fa-chart-bar"></i>&nbsp;&nbsp;Skills</h2>
+          <h2><i class="fa-solid fa-chart-bar"></i> | Skills</h2>
           <p>Throughout my years, I have learnt several different types of Programming Languages, Softwares and
             Programs.</p>
         </div>
@@ -296,41 +296,12 @@
     </section><!-- End Skills Section -->
 
 
-       <!-- ========================================== ORD Section ========================================== -->
-       <section id="ord" class="skills section-bg">
-        <div class="container" data-aos="fade-up">
-  
-          <div class="section-title">
-            <h2><i class="fa-solid fa-person-military-rifle"></i>&nbsp;&nbsp;ORD Counter</h2>
-            <p>How many more days to ORD? <b>(as of 25 June)</b></p>
-          </div>
-  
-          <div class="row skills-content">
-  
-            <div class="col-lg-12">
-  
-              <div class="progress">
-                <span class="skill">25 days remaining <i class="val">96.58%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="96.58" aria-valuemin="0" aria-valuemax="100">
-                  </div>
-                </div>
-              </div>
-  
-            </div>
-  
-          </div>
-  
-        </div>
-      </section><!-- End Skills Section -->
-   
-
     <!-- ================================================ Resume Section ================================================ -->
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2><i class="fa-solid fa-timeline"></i>&nbsp;&nbsp;Timelines</h2>
+          <h2><i class="fa-solid fa-timeline"></i> | Timelines</h2>
           <p>Took a longer path to get to where I am today. Here's a look at my education, experiences and achievement
             timelines over the years.</p>
         </div>
@@ -361,7 +332,7 @@
 
             <h3 class="resume-title">Experiences</h3>
             <div class="resume-item resume-item-present">
-              <h5>Sep 2023 - Present</h5><br>
+              <h5>Sep 2023 - July 2024</h5><br>
               <h4>Supply Assistant (GE) (2) - SBC CP ASA</h4>
               <h5>Dec 2022 - Sep 2023</h5>
               <h4>Supply Assistant (GE) (1) - SBC CP GE Store</h4>
@@ -433,7 +404,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Works By NRFZ</h2>
+          <h2><i class="fa-solid fa-list"></i> | Works By NRFZ</h2>
           <p>A collection of works I have done over the years. Some are commissioned, some are just passion projects. My
             huge interests are illustrations, like signages, vehicles and wireframes.</p>
         </div>
@@ -492,7 +463,8 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/3Q3DFDx.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Train Delays Checker V2"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/delays-checker.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/delays-checker.html" title="Work Details"><i
+                      class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -539,7 +511,8 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/DkH8xMb.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/mrt-signage-rep-s2.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/mrt-signage-rep-s2.html" title="Work Details"><i
+                      class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -599,7 +572,8 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/ojpKcMf.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MAN A22 Lion Mascot Replication"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/man-a22-masc.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/man-a22-masc.html" title="Work Details"><i
+                      class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -614,7 +588,8 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/B1ktST3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications S1"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/mrt-signage-rep-s1.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/mrt-signage-rep-s1.html" title="Work Details"><i
+                      class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -629,7 +604,8 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/0cL7BPm.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="MRT Signages Concept/Replications S1"><i class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/hydrationreg.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/hydrationreg.html" title="Work Details"><i
+                      class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -690,7 +666,8 @@
                   <a href="https://i.imgur.com/MKX6hwn.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Food Review Compiler/Flashify - a Flashcard App"><i
                       class="fa-solid fa-magnifying-glass-plus"></i></a>
-                  <a href="worksbynrfz/food-rev-flash-app.html" title="Work Details"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="worksbynrfz/food-rev-flash-app.html" title="Work Details"><i
+                      class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
             </div>
@@ -741,7 +718,7 @@
         &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: May 2024
+        Last Modified: July 2024</a>
       </div>
     </div>
   </footer><!-- End Footer -->
