--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,8 @@
                         </span>
                     </p>
                     <h1 class="mb-3 bread"><i class="fa-solid fa-pen-clip"></i> | Blog</h1>
-                    <p>My take on anything and everything. Also a platform to showcase the Behind-The-Scenes<br>of how my designs came to be.</p>
+                    <p>My take on anything and everything. Also a platform to showcase the Behind-The-Scenes<br>of how
+                        my designs came to be.</p>
                 </div>
             </div>
         </div>
@@ -106,42 +107,24 @@
                                 </div>
                             </div>
                         </div>
-                        <hr>
                     </div>
 
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12">
-
-                                <div class="case" data-aos="fade-up">
-                                    <div class="row">
-                                        <div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-                                            <a href="#" class="img w-100 mb-3 mb-md-0"
-                                                style="background-image: url(https://i.imgur.com/3Q3DFDx.png);"></a>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                </div>
-
-
-
-
-                            </div>
-                        </div>
-                        <div class="row mt-5">
-                            <div class="col text-center">
-                                <div class="block-27" data-aos="fade-up">
-                                    <ul>
-                                        <li><a href="#"><i class="fa-solid fa-chevron-left"></i></a></li>
-                                        <li class="active"><span>1</span></li>
-                                        <!-- <li><a href="#">2</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                    <hr>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <div class="block-27" data-aos="fade-up">
+                        <ul>
+                            <li><a href="#"><i class="fa-solid fa-chevron-left"></i></a></li>
+                            <li class="active"><span>1</span></li>
+                            <!-- <li><a href="#">2</a></li>-->
+                        </ul>
                     </div>
+                </div>
+            </div>
+        </div>
     </section>
-    -->
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
