--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/dQ1DiXn.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -500,7 +500,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
             <div class="portfolio-wrap">
