--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <div class="icon">
                   <i class="fa-solid fa-person-military-rifle"></i>
                 </div>
-                <h3>A bit more before OWADIO!</h3>
-                <p>Last few weeks left before I ORD.</p>
+                <h3>OWADIO!</h3>
+                <p>Currently taking a break, looking for job opportunities</p>
               </div>
             </div>
           </div>
@@ -332,7 +332,7 @@
 
             <h3 class="resume-title">Experiences</h3>
             <div class="resume-item resume-item-present">
-              <h5>Sep 2023 - Present</h5><br>
+              <h5>Sep 2023 - Jul 2024</h5><br>
               <h4>Supply Assistant (GE) (2) - SBC CP ASA</h4>
               <h5>Dec 2022 - Sep 2023</h5>
               <h4>Supply Assistant (GE) (1) - SBC CP GE Store</h4>
