--- a/worksbynrfz/bp12.html
+++ b/worksbynrfz/bp12.html
@@ -64,6 +64,7 @@
               <h3><i class="fa-solid fa-pen-to-square"></i>&nbsp;&nbsp;Project Description</h3>
               <p>
                 A concept proposal I made to showcase my replication works capability.
+                Design is updated in July 2024, to align with current design standards.
               </p>
             </div>
 
@@ -71,8 +72,8 @@
               <h3><i class="fa-solid fa-circle-info"></i>&nbsp;&nbsp;About Project</h3>
               <ul>
                 <li><strong><i class="fa-solid fa-list"></i>&nbsp;&nbsp;Category</strong>: Concepts & Replications</li>
-                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023</li>
-                <li><a href="https://drive.google.com/file/d/1_zd_nk6V3VC3Nd2vTkMsnDZ5BRFu6Z1r/view?usp=sharing"
+                <li><strong><i class="fa-solid fa-calendar-days"></i>&nbsp;&nbsp;Project Year</strong>: 2023/2024</li>
+                <li><a href="https://drive.google.com/file/d/1gw_glFIaAOs9FSBloBTBgmgOObMK1GcL/view?usp=sharing"
                     target="_blank"><button type="button" class="btn btn-outline-download"><i
                         class="fa-solid fa-file-pdf"></i>
                       &nbsp;&nbsp;View PDF Version</button></a></li>
@@ -86,7 +87,7 @@
                 <div class="swiper-wrapper align-items-center">
 
                   <div class="swiper-slide">
-                    <img src="https://i.imgur.com/ksPu9sX.png" alt="">
+                    <img src="https://i.imgur.com/7jnogda.png" alt="">
                   </div>
 
                 </div>
