--- a/worksbynrfz/bp12.html
+++ b/worksbynrfz/bp12.html
@@ -87,7 +87,7 @@
                 <div class="swiper-wrapper align-items-center">
 
                   <div class="swiper-slide">
-                    <img src="https://i.imgur.com/7jnogda.png" alt="">
+                    <img src="https://i.imgur.com/EfNQBgk.png" alt="">
                   </div>
 
                 </div>
