--- a/index.html
+++ b/index.html
@@ -296,108 +296,114 @@
     </section><!-- End Skills Section -->
 
 
-    <!-- ================================================ Resume Section ================================================ -->
-    <section id="resume" class="resume">
-      <div class="container" data-aos="fade-up">
+ <!-- ================================================ Resume Section ================================================ -->
+ <section id="resume" class="resume">
+  <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2><i class="fa-solid fa-timeline"></i> | Timelines</h2>
-          <p>Took a longer path to get to where I am today. Here's a look at my education, experiences and achievement
-            timelines over the years.</p>
+    <div class="section-title">
+      <h2><i class="fa-solid fa-timeline"></i> | Timelines</h2>
+      <p>Took a longer path to get to where I am today. Here's a look at my education, experiences and achievement
+        timelines over the years.</p>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-6">
+        <!-- Education -->
+        <h3 class="resume-title">Education</h3>
+        <div class="resume-item resume-item-present">
+          <h5>2019 - 2022</h5>
+          <p><b>Tertiary Education (2) </b></p>
+          <h4>Diploma in Information Technology</h4>
+          <p><em>Singapore Polytechnic (SP)</em></p>
+        </div>
+        <div class="resume-item">
+          <h5>2017 - 2018</h5>
+          <p><b>Tertiary Education (1) </b></p>
+          <h4>NITEC in Information Technlogy</h4>
+          <p><em>Institute of Technical Education (ITE)</em></p>
+        </div>
+        <div class="resume-item">
+          <h5>2013 - 2016</h5>
+          <p><b>Secondary School</b></p>
+          <h4>N Levels</h4>
+          <p><em>Chua Chu Kang Secondary School</em></p>
+        </div>
+        <div class="resume-item">
+          <h5>2007 - 2012</h5>
+          <p><b>Primary School</b></p>
+          <h4>PSLE</h4>
+          <p><em>Unity Primary School</em></p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item resume-item-present">
-              <h5>2019-2022 | Tertiary Education (2)</h5>
-              <h4>Diploma in Information Technology</h4>
-              <p><em>Singapore Polytechnic (SP)</em></p>
-            </div>
-            <div class="resume-item">
-              <h5>2017 - 2018 | Tertiary Education (1)</h5>
-              <h4>NITEC in Information Technlogy</h4>
-              <p><em>Institute of Technical Education (ITE)</em></p>
-            </div>
-            <div class="resume-item">
-              <h5>2013 - 2016 | Secondary School</h5>
-              <h4>N Levels</h4>
-              <p><em>Chua Chu Kang Secondary School</em></p>
-            </div>
-            <div class="resume-item">
-              <h5>2007 - 2012 | Primary School</h5>
-              <h4>PSLE</h4>
-              <p><em>Unity Primary School</em></p>
-            </div>
-
-            <h3 class="resume-title">Experiences</h3>
-            <div class="resume-item resume-item-present">
-              <h5>Sep 2023 - Jul 2024</h5><br>
-              <h4>Supply Assistant (GE) (2) - SBC CP ASA</h4>
-              <h5>Dec 2022 - Sep 2023</h5>
-              <h4>Supply Assistant (GE) (1) - SBC CP GE Store</h4>
-              <p><em>Singapore Armed Forces</em></p>
-            </div>
-            <div class="resume-item">
-              <h5>Oct 2021 - Feb 2022</h5>
-              <h4>Front-End Developer / UX Designer - Full-Time/Final-Year Project</h4>
-              <p><em>HatchDev Asia</em></p>
-            </div>
-            <div class="resume-item">
-              <h5>Mar 2021 - Aug 2021</h5>
-              <h4>Intern, Information Services Group</h4>
-              <p><em>Housing & Development Board</em></p>
-            </div>
-            <div class="resume-item">
-              <h5>Jan 2019 - Feb 2019</h5>
-              <h4>Public Transport Surveyor - Part-Time</h4>
-              <p><em> TTS Group of Companies</em></p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <h3 class="resume-title">Awards & Achievements</h3>
-            <div class="resume-item resume-item-present">
-              <h5>2023</h5>
-              <p><em>Singapore Armed Forces (SAF) </em></p>
-              <ul>
-                <li>Base Sergeant Major Coin (Supply Base Central)</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h5>2019</h5>
-              <p><em>Institute of Technical Education (ITE) </em></p>
-              <ul>
-                <li>Graduated from ITE</li>
-                <li>ITE Gold Course Medal/ Graduation Ceremony </li>
-                <li>Anugerah Mendaki - 2019</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h5>2018</h5>
-              <p><em>Institute of Technical Education (ITE) </em></p>
-              <ul>
-                <li>Service Star Award (Gold)</li>
-                <li>Director's List (Year 2)</li>
-                <li>Edusave Character Award</li>
-                <li>Appointment (Vice President – Mobile Apps & Services Club)</li>
-                <li>CDC & CCC ITE Scholarship</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h5>2017</h5>
-              <p><em>Institute of Technical Education (ITE) </em></p>
-              <ul>
-                <li>Director's List (Year 1)</li>
-                <li>Edusave Character Award</li>
-                <li>CDC & CCC ITE Scholarship</li>
-              </ul>
-            </div>
-          </div>
+        <!-- Experiences -->
+        <h3 class="resume-title">Experiences</h3>
+        <div class="resume-item resume-item-present">
+          <h5>Sep 2023 - Jul 2024</h5><br>
+          <h4>Supply Assistant (GE) (2) - SBC CP ASA</h4>
+          <h5>Dec 2022 - Sep 2023</h5>
+          <h4>Supply Assistant (GE) (1) - SBC CP GE Store</h4>
+          <p><em>Singapore Armed Forces</em></p>
         </div>
-
+        <div class="resume-item">
+          <h5>Oct 2021 - Feb 2022</h5>
+          <h4>Front-End Developer / UX Designer - Full-Time/Final-Year Project</h4>
+          <p><em>HatchDev Asia</em></p>
+        </div>
+        <div class="resume-item">
+          <h5>Mar 2021 - Aug 2021</h5>
+          <h4>Intern, Information Services Group</h4>
+          <p><em>Housing & Development Board</em></p>
+        </div>
+        <div class="resume-item">
+          <h5>Jan 2019 - Feb 2019</h5>
+          <h4>Public Transport Surveyor - Part-Time</h4>
+          <p><em> TTS Group of Companies</em></p>
+        </div>
       </div>
-    </section><!-- End Resume Section -->
+
+      <div class="col-lg-6">
+        <h3 class="resume-title">Awards & Achievements</h3>
+        <div class="resume-item resume-item-present">
+          <h5>2023</h5>
+          <p><em>Singapore Armed Forces (SAF) </em></p>
+          <ul>
+            <li>Base Sergeant Major Coin (Supply Base Central)</li>
+          </ul>
+        </div>
+        <div class="resume-item">
+          <h5>2019</h5>
+          <p><em>Institute of Technical Education (ITE) </em></p>
+          <ul>
+            <li>Graduated from ITE</li>
+            <li>ITE Gold Course Medal/ Graduation Ceremony </li>
+            <li>Anugerah Mendaki - 2019</li>
+          </ul>
+        </div>
+        <div class="resume-item">
+          <h5>2018</h5>
+          <p><em>Institute of Technical Education (ITE) </em></p>
+          <ul>
+            <li>Service Star Award (Gold)</li>
+            <li>Director's List (Year 2)</li>
+            <li>Edusave Character Award</li>
+            <li>Appointment (Vice President – Mobile Apps & Services Club)</li>
+            <li>CDC & CCC ITE Scholarship</li>
+          </ul>
+        </div>
+        <div class="resume-item">
+          <h5>2017</h5>
+          <p><em>Institute of Technical Education (ITE) </em></p>
+          <ul>
+            <li>Director's List (Year 1)</li>
+            <li>Edusave Character Award</li>
+            <li>CDC & CCC ITE Scholarship</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section><!-- End Resume Section -->
 
     <!-- ==================================== Portfolio Section ==================================== -->
     <section id="portfolio" class="portfolio section-bg">
@@ -718,7 +724,7 @@
         &copy; Copyright <strong><span>2024</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: July 2024</a>
+        Last Modified: August 2024</a>
       </div>
     </div>
   </footer><!-- End Footer -->
