--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="icon">
                   <i class="fa-solid fa-person-military-rifle"></i>
                 </div>
-                <h3><a href="https://nurafianzulkifli.github.io/nrfz-dev" style="color: #407edb;">OWADIO!</a></h3>
+                <h3><a href="https://nurafianzulkifli.github.io/nrfz-dev" style="color: #407edb;" title="Preview the new website look!">OWADIO!</a></h3>
                 <p>Currently taking a break, looking for job opportunities</p>
               </div>
             </div>
