--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
                     <nav class="classy-navbar justify-content-between" id="pwNav">
 
-                        <a class="nav-brand img-logo" href="./index.html"><img class="logo-img" src="./img/core-img/logo.png" alt></a>
+                        <a class="nav-brand img-logo" href="./index.html"><img class="logo-img"
+                                src="./img/core-img/logo.png" alt></a>
 
                         <div class="classy-navbar-toggler">
                             <span class="navbarToggler"><span></span><span></span><span></span></span>
@@ -129,6 +130,48 @@
             </div>
             <div class="row pw-portfolio">
 
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
+                    data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/4baefCu.png" alt>
+                        <div class="hover-content">
+                            <h4>Train Delays Checker V3</h4>
+                            <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/4baefCu.png" class="portfolio-img"><i
+                                    class="fa-solid fa-expand"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
+                    data-wow-delay="700ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/FC4fSsG.png" alt>
+                        <div class="hover-content">
+                            <h4>Bus Replications</h4>
+                            <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
+                                    class="fa-solid fa-expand"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
+                    data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/03mFKk0.png" alt>
+                        <div class="hover-content">
+                            <h4>MyTransport.SG App Redesign</h4>
+                            <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
+                                    class="fa-solid fa-expand"></i></a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
@@ -157,35 +200,6 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/03mFKk0.png" alt>
-                        <div class="hover-content">
-                            <h4>MyTransport.SG App Redesign</h4>
-                            <a class="info" href="worksbynrfz/myts-app.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/03mFKk0.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
-                    data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/FC4fSsG.png" alt>
-                        <div class="hover-content">
-                            <h4>Bus Replications</h4>
-                            <a class="info" href="worksbynrfz/bus-rep.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/FC4fSsG.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
@@ -195,20 +209,6 @@
                             <a class="info" href="worksbynrfz/igra3.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/kstN8gT.png" class="portfolio-img"><i
-                                    class="fa-solid fa-expand"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
-                    data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/4baefCu.png" alt>
-                        <div class="hover-content">
-                            <h4>Train Delays Checker V3</h4>
-                            <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
-                                    class="fa-solid fa-circle-info"></i></a>
-                            <a href="https://i.imgur.com/4baefCu.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
@@ -228,14 +228,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms" style="margin-bottom: 18px;">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms"
+                        style="margin-bottom: 18px;">
                         <h2>Likes & Interests</h2>
                     </div>
                 </div>
 
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-                        <h1><a href="https://en.wikipedia.org/wiki/Jack_of_all_trades" style="font-size: 20px; color: #5f6051;">"Jack of all trades, master of
+                        <h1><a href="https://en.wikipedia.org/wiki/Jack_of_all_trades"
+                                style="font-size: 20px; color: #5f6051;">"Jack of all trades, master of
                                 none"</a></h2>
                     </div>
                 </div>
@@ -368,15 +370,20 @@
 
                         <div class="copywrite-text">
                             <p>
-                                &copy; <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
+                                &copy;
+                                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
                             </p>
                         </div>
 
                         <div class="social-info">
-                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram"
+                                    aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -384,9 +391,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom"
-        data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif"
-        data-zindex="12345111111"
+    <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
+        data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
