2024-09 Feature Update to Version 2409

--- a/worksbynrfz/bus-rep.html
+++ b/worksbynrfz/bus-rep.html
@@ -203,30 +203,34 @@
   </section>
 
 
-  <footer class="footer-area">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="footer-content d-flex align-items-center justify-content-between">
+    <footer class="footer-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-content d-flex align-items-center justify-content-between">
 
-            <div class="copywrite-text">
-              <p>
-                Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved</a>
-              </p>
-            </div>
+                        <div class="copywrite-text">
+                            <p>
+                                &copy;
+                                <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli</a>
+                            </p>
+                        </div>
 
-            <div class="social-info">
-              <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
-              <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
-              <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-              <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+                        <div class="social-info">
+                            <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
+                                    aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram"
+                                    aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Poppins, sans-serif" data-zindex="12345111111"
