--- a/index.html
+++ b/index.html
@@ -130,6 +130,20 @@
             </div>
             <div class="row pw-portfolio">
 
+                <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
+                    data-wow-delay="100ms">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/4baefCu.png" alt>
+                        <div class="hover-content">
+                            <h4>Improved Wayfinding Standards - A Concept</h4>
+                            <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
+                                    class="fa-solid fa-circle-info"></i></a>
+                            <a href="https://i.imgur.com/4baefCu.png" class="portfolio-img"><i
+                                    class="fa-solid fa-expand"></i></a>
+                        </div>
+                    </div>
+                </div> -->
+
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
@@ -145,7 +159,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp"
-                    data-wow-delay="700ms">
+                    data-wow-delay="500ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/FC4fSsG.png" alt>
                         <div class="hover-content">
@@ -159,7 +173,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp"
-                    data-wow-delay="500ms">
+                    data-wow-delay="700ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/03mFKk0.png" alt>
                         <div class="hover-content">
@@ -201,7 +215,7 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp"
-                    data-wow-delay="100ms">
+                    data-wow-delay="500ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/kstN8gT.png" alt>
                         <div class="hover-content">
