--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
             </div>
             <div class="row pw-portfolio">
 
-                <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/4baefCu.png" alt>
                         <div class="hover-content">
                             <h4>Improved Wayfinding Standards - A Concept</h4>
-                            <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
+                            <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/4baefCu.png" class="portfolio-img"><i
                                     class="fa-solid fa-expand"></i></a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp"
                     data-wow-delay="300ms">
