--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -104,6 +104,19 @@
                 </div>
             </div>
             <div class="row pw-portfolio">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item cr mb-30 wow fadeInUp"
+                data-wow-delay="100ms">
+                <div class="single-portfolio-content">
+                    <img src="https://i.imgur.com/EiaJAoM.png" alt>
+                    <div class="hover-content">
+                        <h4>Experimenting Improvements of Current Wayfinding - Implementation Brainstorming</h4>
+                        <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                                class="fa-solid fa-circle-info"></i></a>
+                        <a href="https://i.imgur.com/EiaJAoM.png" class="portfolio-img"><i
+                                class="fa-solid fa-expand"></i></a>
+                    </div>
+                </div>
+            </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wd mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
