--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/EiaJAoM.png" alt>
                         <div class="hover-content">
-                            <h4>Experimenting Improvements of Current Wayfinding - Implementation Brainstorming</h4>
+                            <h4>EICW - Implementation Brainstorming</h4>
                             <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
                                     class="fa-solid fa-circle-info"></i></a>
                             <a href="https://i.imgur.com/EiaJAoM.png" class="portfolio-img"><i
