--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Experimenting Improvements of Current Wayfinding - Implementation Brainstorming | WBN</title>
+  <title>EICW - Implementation Brainstorming | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/91cXZ6W.png" />
@@ -82,7 +82,7 @@
                 </li>
               </ol>
             </nav>
-            <h2 class="page-title">Experimenting Improvements of Current Wayfinding - Implementation Brainstorming</h2>
+            <h2 class="page-title">EICW - Implementation Brainstorming</h2>
           </div>
         </div>
       </div>
@@ -135,12 +135,12 @@
       <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
         <a href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"
           class="btn pw-btn btn-2 mt-15" target="_blank">
-          <i class="fa-solid fa-file-pdf"></i>&nbsp;View PDF Version</a>
+          <i class="fa-solid fa-external-link"></i>&nbsp; View in Google Drive</a>
       </div>
       <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download
+        <a href="downloads/EICW.pdf" download
           class="btn pw-btn btn-2 mt-15" target="_blank">
-          <i class="fa-solid fa-file-pdf"></i>&nbsp;Download Handbook</a>
+          <i class="fa-solid fa-download"></i>&nbsp; Download Handbook</a>
       </div>
     </div>
   </section>
