--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -138,7 +138,7 @@
           <i class="fa-solid fa-external-link"></i>&nbsp; View in Google Drive</a>
       </div>
       <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-        <a href="downloads/EICW.pdf" download
+        <a href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download
           class="btn pw-btn btn-2 mt-15" target="_blank">
           <i class="fa-solid fa-download"></i>&nbsp; Download Handbook</a>
       </div>
