--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -10,7 +10,7 @@
     <title>NRFZ | Works by NRFZ</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <meta property="og:image" content="https://i.imgur.com/91cXZ6W.png" />
+    <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
