--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 title="Facebook">
                                 <div class="fa-brands fa-facebook" style="font-size: 30px"></div>
                             </a>
-                            <a href="https://www.instagram.com/nrfz._/" target="_blank" class="media_link"
+                            <a href="https://www.instagram.com/zrfn_lkf/" target="_blank" class="media_link"
                                 title="Instagram">
                                 <div class="fa-brands fa-instagram" style="font-size: 30px"></div>
                             </a>
@@ -396,7 +396,7 @@
                                     aria-hidden="true"></i></a>
                             <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
                                     aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram"
+                            <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram"
                                     aria-hidden="true"></i></a>
                         </div>
                     </div>
