--- a/worksbynrfz/bus-rep.html
+++ b/worksbynrfz/bus-rep.html
@@ -223,7 +223,7 @@
                                     aria-hidden="true"></i></a>
                             <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
                                     aria-hidden="true"></i></a>
-                            <a href="https://www.instagram.com/nrfz._/"><i class="fa-brands fa-instagram"
+                            <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram"
                                     aria-hidden="true"></i></a>
                         </div>
                     </div>
