--- a/about.html
+++ b/about.html
@@ -294,6 +294,18 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
+                            Oct 2024
+                        </div>
+                        <h3 style="font-size: 20px; font-weight: bolder;">Alphaeus Pte Ltd</h4>
+                            <p style="font-size: 15px; text-align: left;">
+                                - IT Desktop Support Engineer (Kyndryl)</b>
+                            </p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                    <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                        <div class="period-date-exp">
                             Dec 2022 - Jul 2024
                         </div>
                         <h3 style="font-size: 20px; font-weight: bolder;">Singapore Armed Forces (SAF)</h4>
