--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -122,7 +122,7 @@
               <i class="fa-solid fa-calendar-days"></i>
             </div>
             <h3 style="font-size: 20px; font-weight: bolder;">Project Year</h3>
-            <h4 style="font-size: 15px; font-weight: normal;">2023 (V2)/2024 (V3)</h4>
+            <h4 style="font-size: 15px; font-weight: normal;">2024 (V3)</h4>
           </div>
         </div>
       </div>
@@ -137,9 +137,9 @@
             <i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V3</a>
         </div>
 
-        <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/" class="btn pw-btn btn-2 mt-15"
+        <!-- <a href="https://nurafianzulkifli.github.io/train-delays-checker-v2/" class="btn pw-btn btn-2 mt-15"
           target="_blank">
-          <i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V2 (Legacy)</a>
+          <i class="fa-solid fa-arrow-up-right-from-square"></i>&nbsp;Train Delays Checker V2 (Legacy)</a> -->
       </div>
     </div>
     </div>
