--- a/worksbynrfz/improve-wf copy 2.html
+++ b/worksbynrfz/improve-wf copy 2.html
@@ -90,15 +90,12 @@
   </section>
 
 
-  <section class="wbnrfz-summ clearfix">
+  <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
+
     <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div>
-              <span>Project Title:</span>
-              <h1>Experimenting Improvements of Current Wayfinding</h1>
-            </div>
+          <div class="col-lg-10">
             <div class="details_catagory_wrap">
               <div class="single_catagory">
                 <span>Category</span>
@@ -114,45 +111,31 @@
                   <a
                     href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html">
                     <i class="fa-brands fa-facebook"></i> </a>
-                  <a
-                    href="https://x.com/intent/post?url=https%3A%2F%2Fnurafianzulkifli.com%2Fworksbynrfz%2Fimprove-wf.html&text=EICW%20-%20Implementation%20Brainstormingvia%3Dnrfzlkf_">
-                    <i class="fa-brands fa-twitter"></i> </a>
-                  <a href="#" class="clipboard" onclick="copyToClipboard()"><i class="fa-solid fa-copy"></i>
-                    <p class="clipboard-copied"></p>
-                  </a>
+                  <a href="#"> <i class="fa-brands fa-twitter"></i> </a>
+                  <a href="#"> <i class="fa-brands fa-instagram"></i> </a>
                 </div>
               </div>
-
+              <div class="single_catagory text-center">
+                <a class="btn wbnrfz_btn" href="#">First Edition</a>
+                <a class="btn wbnrfz_btn" href="#">Second Edition</a>
+              </div>
             </div>
-            <div class="single_catagory">
-              <a class="btn wbnrfz_btn" href="#"><i class="fa-solid fa-download"></i>&nbsp; Download the First
-                Edition</a>
-              <a class="btn wbnrfz_btn" href="#"><i class="fa-solid fa-external-link"></i>&nbsp; View in Google
-                Drive</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
+            <div>
+              <h1>Experimenting Improvements of Current Wayfinding</h1>
+            </div>
+
             <div class="details_info">
               <div class="row">
                 <div class="col-lg-12">
                   <div class="info">
                     <p>A self-made handbook of how I explored different ways to
                       make the current Wayfinding system better. <br>
-
+                    
                       Covered in this Handbook:<br>
                       - Design Improvements <br>
                       - Font and Color Palettes <br>
-                      - Design Ideas Brainstorming</p>
-                    </p>
+                      - Design Ideas Brainstorming</p></p>
                   </div>
                 </div>
               </div>
@@ -160,22 +143,22 @@
 
 
             <div class="banner wow fadeInUp" data-wow-delay="150ms">
-              <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img"><img src="https://i.imgur.com/sBOOEqY.png"
-                  class="img-fluid" alt="cover-page"></a>
+              <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img"><img
+                src="https://i.imgur.com/sBOOEqY.png" class="img-fluid" alt="cover-page"></a>
             </div>
-
+            
             <div class="details_single_img">
               <div class="row">
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
                     <a href="https://i.imgur.com/W3vPlwI.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/W3vPlwI.png" class="img-fluid" alt="font-col-palette"></a>
+                      src="https://i.imgur.com/W3vPlwI.png" class="img-fluid" alt="font-col-palette"></a>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                   <div class="thumb">
                     <a href="https://i.imgur.com/94YwAP9.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/94YwAP9.png" class="img-fluid" alt="des-idea"></a>
+                      src="https://i.imgur.com/94YwAP9.png" class="img-fluid" alt="des-idea"></a>
                   </div>
                 </div>
               </div>
@@ -184,6 +167,12 @@
         </div>
       </div>
     </div>
+  </section>
+
+
+
+
+  </div>
   </section>
 
 
@@ -236,8 +225,6 @@
   <script src="../js/isotope.pkgd.min.js"></script>
 
   <script src="../js/portfolio-comp.js"></script>
-
-  <script src="../js/copy-to-clipboard.js"></script>
 
 
 </body>
