--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -115,7 +115,7 @@
                     href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html">
                     <i class="fa-brands fa-facebook"></i> </a>
                   <a
-                    href="https://x.com/intent/post?url=https%3A%2F%2Fnurafianzulkifli.com%2Fworksbynrfz%2Fimprove-wf.html&text=EICW%20-%20Implementation%20Brainstormingvia%3Dnrfzlkf_">
+                    href="https://x.com/intent/post?url=https%3A%2F%2Fnurafianzulkifli.com%2Fworksbynrfz%2Fimprove-wf.html&text=EICW%20-%20Implementation%20Brainstorming">
                     <i class="fa-brands fa-twitter"></i> </a>
                   <a href="#" class="clipboard" onclick="copyToClipboard()"><i class="fa-solid fa-copy"></i>
                     <p class="clipboard-copied"></p>
