--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -96,7 +96,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div>
-              <span>Project Title:</span>
+              <span>LTA's New Wayfinding System</span>
               <h1>Experimenting Improvements of Current Wayfinding</h1>
             </div>
             <div class="details_catagory_wrap">
@@ -112,20 +112,21 @@
                 <span>Share Project</span>
                 <div class="social_links">
                   <a
-                    href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html">
+                    href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html" title="Facebook">
                     <i class="fa-brands fa-facebook"></i> </a>
-                  <a
-                    href="https://x.com/intent/post?url=https%3A%2F%2Fnurafianzulkifli.com%2Fworksbynrfz%2Fimprove-wf.html&text=EICW%20-%20Implementation%20Brainstorming">
-                    <i class="fa-brands fa-twitter"></i> </a>
-                  <a href="#" class="clipboard" onclick="copyToClipboard()"><i class="fa-solid fa-copy"></i>
-                    <p class="clipboard-copied"></p>
+                  <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= EICW - Implementation Brainstorming"
+                    title="X (Twitter)">
+                    <i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
+                      class="fa-solid fa-clipboard"></i>
+                    <p class="clipboard-copied" style="font-size: 12px;"></p>
                   </a>
                 </div>
               </div>
 
             </div>
             <div class="single_catagory">
-              <a class="btn wbnrfz_btn" href="#"><i class="fa-solid fa-download"></i>&nbsp; Download the First
+              <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download=""><i class="fa-solid fa-download"></i>&nbsp; Download the First
                 Edition</a>
               <a class="btn wbnrfz_btn" href="#"><i class="fa-solid fa-external-link"></i>&nbsp; View in Google
                 Drive</a>
