--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -128,7 +128,7 @@
             <div class="single_catagory">
               <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download=""><i class="fa-solid fa-download"></i>&nbsp; Download the First
                 Edition</a>
-              <a class="btn wbnrfz_btn" href="#"><i class="fa-solid fa-external-link"></i>&nbsp; View in Google
+              <a class="btn wbnrfz_btn" href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i class="fa-solid fa-external-link"></i>&nbsp; View in Google
                 Drive</a>
             </div>
           </div>
