Revert "Update about.html"
This reverts commit 2b86ffd0c0ba9efdb4f97cd9766ea98b2b413bbd.

--- a/about.html
+++ b/about.html
@@ -291,7 +291,7 @@
                 </div>
             </div>
             <div class="row">
-                <!-- <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
                             Oct 2024
@@ -301,7 +301,7 @@
                                 - IT Desktop Support Engineer (Kyndryl)</b>
                             </p>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
